force-app/main/default/objects/Resource_Project_Rol__c/Resource_Project_Rol__c.object-meta.xml
<CustomObject>
    <label>Resource Project Rol</label>
    <nameField>
        <label>Resource Project Rol Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Resource Project Rols</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>