force-app/main/default/objects/Resource_Project_Rol__c/fields/Hours_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Hours_Assigned__c</fullName>
    <label>Hours Assigned</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>