force-app/main/default/objects/Resource_Project_Rol__c/fields/Project_Rol__c.field-meta.xml
<CustomField>
    <fullName>Project_Rol__c</fullName>
    <label>Project Rol</label>
    <referenceTo>Project_Rol__c</referenceTo>
    <relationshipLabel>Resource Project Rols</relationshipLabel>
    <relationshipName>Resource_Project_Rols</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>