force-app/main/default/objects/Resource_Project_Rol__c/fields/StopDate__c.field-meta.xml
<CustomField>
    <fullName>StopDate__c</fullName>
    <label>StopDate</label>
    <type>Date</type>
</CustomField>